# vid-allegro

./: .gitignore  CMakeLists.txt  asteroides.cpp  main.cpp
p1/: main.cpp
p2/src_practica_02/: Practica 02.url  README.txt  practica_02_base.js
p3/: README.txt  envMapping.html  normalMapping.html  phong.html
